--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @import "common/utility.scss";
 @import "common/fonts.scss";
 @import "common/header.scss";
+@import "./pickYourPassion.scss";
 
 //utility
 
@@ -330,8 +331,6 @@ main {
     article { background-color: rgba($color: $primPink, $alpha: 0.1);}
 }
 
-
-
 #readMoreAd { width: 11rem; }
 
 #directorsWrap {
@@ -396,147 +395,6 @@ main {
 
     article { display: none; }
 }
-
-
-//Pick Your Passion
-#pickYourPassion {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0 auto 0 auto;
-    text-align: center;
-    margin-top: 15vh;
-    
-
-
-    h1 {
-        @extend .mainFont;
-        font-size: 1.5rem;
-        font-weight: 600;
-
-        vertical-align: middle;
-        text-align: center;
-        margin: auto;
-
-        cursor: pointer;
-        user-select: none;
-        color: #1E1E1E;
-        width: auto;
-        
-        padding: 1.5rem;
-        border: .25rem solid $primPink;
-        border-radius: .25rem;
-    }
-    ul {
-        display: none;
-    }
-    // padding-bottom: 1rem;
-    @extend .parentWidth;
-}
-
-#pickYouPassionWrap {
-    background-color: white;
-    
-
-    nav {
-        box-sizing: border-box;
-
-        width: 100%;
-        margin: auto;
-        padding: 0 10% 5rem 10%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-
-        // padding-bottom: 5rem;
-        
-       
-    
-        a {
-            margin: 5% 2.5% 0 2.5%;
-            width: 20%;
-            height: 11.5rem;
-    
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            text-decoration: none;
-
-            :hover {
-                button {
-                    background-color: $primPink;
-                }
-            }
-    
-            img {
-
-                // height: 7rem;
-                max-width: 100%;
-                width: auto;
-                height: auto;
-                max-height: 7rem;
-            }
-            
-            
-            button {
-                font-size: 1rem; 
-                text-transform: none;
-                min-height: 3.5rem;
-                
-            }
-        }
-        
-        a:hover {
-            button {
-                background-color: $primPink;
-                color: #1E1E1E;
-            }
-
-            margin: 5% .5% 0 .5%;
-            width: 24%;
-            height: 12rem;
-            img {
-                max-width: 125%;
-                max-height: 8rem;
-            }
-        }
-    
-    }
-    #passionContainer {
-        display: block;
-        position: relative;
-
-        width: 100%;
-        height: 75vh;
-
-        * {
-            position: absolute;
-            top: 0;
-            height: 100%;
-        }
-        #mapNav {
-            z-index: 1000;
-            left: 0;
-
-            width: 40%;
-            height: 100%;
-
-            background-color: red;
-        }
-        #mapWrap {
-            width: 100%; 
-            
-            
-        }
-
-        .leaflet-control-container 
-            { display: none; }
-    }
-}
-
-
-
 
 #contactUsWrap {
     width: 100%;
