--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "common/fonts.scss";
 @import "common/header.scss";
 @import "./pickYourPassion.scss";
+@import "./mapNav.scss";
 
 //utility
 
