--- a/src/scss/pickYourPassion.scss
+++ b/src/scss/pickYourPassion.scss
@@ -84,101 +84,11 @@ body {
         width: 100%;
         height: 75vh;
 
-        * {
-            position: absolute;
-        }
-        #mapNav {
-            z-index: 1000;
-            left: 0;
-
-            background-color: white;//$offWhiteBackground; //rgba(239, 239, 239, .85);
-            box-shadow: 0 0 .1rem .1rem rgba(0,0,0,.4);
-
-            width: 40%;
-            height: 95%;
-
-            top: 2.5%;
-
-            display: flex;
-            flex-wrap: wrap;
-            * { 
-                position: relative;
-                display: flex;
-                
-                width: 100%;
-                box-sizing: border-box;
-            }
-
-            #mapMetaNavWrap {
-                height: 15%;
-                flex-direction: row;
-
-                i {
-                    cursor: pointer;
-                }
-            }
-            #mapNavListWrap {
-                height: 85%;
-
-                #mapNavList {
-                    @extend .default;
-                    height: auto;
-                    
-                    flex-direction: column;
-                    overflow: auto;
-                    
-                    div {
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-
-                        div {
-                            display: block;
-                            text-align: center;
-
-                            h2 {
-                                @extend .mainCapsFont;
-                                display: block;
-
-                                text-transform: uppercase;
-                                text-align: center;
-                            }
-                        }
-                        nav {
-                            width: 100%;
-    
-                            display: flex;
-                            flex-direction: column;
-                            box-sizing: border-box;
-
-                            div {
-                                margin: 1.5rem 0 1.5rem 0;
-
-                                display: flex;
-                                flex-direction: row;
-                                justify-content: space-between;
-                                
-                                *{
-                                    @extend .mainFont;
-                                    font-size: 1.25rem;
-
-                                    display: flex;
-                                    width: auto;
-                                    margin: 0 1.5rem 0 1.5rem;
-                                }
-                                h3 {
-                                    
-                                }
-                             
-                            }
-                        }
-                    }
-                }
-            }
-
-
-        }
+        //Map Nav styling in ./mapNav.scss
+        
         #mapWrap {
+            position: absolute;
+
             width: 100%; 
             height: 100%;
             
