--- a/src/scss/mapNav.scss
+++ b/src/scss/mapNav.scss
@@ -71,88 +71,117 @@
         #activePassionWindow {
             ul {
                 width: 100%;
-                margin-block-start: 0;
-                margin-block-end: 0;
-                padding-inline-start: 0;
+                margin: 0;
+                padding: 0;
                 flex-direction: column;
                 box-sizing: border-box;
                 
                 list-style: none;
                 display: flex;
+                flex-direction: column;
+                align-content: center;
                 
                 overflow-y: auto;
     
                 min-height: 5rem;
                 max-height: 15rem;
         
-                div {
+                li {
+                    cursor: pointer;
+
                     margin-bottom: 1.5rem;
-                    background: none;
+                    padding: 0 1rem;
+                    
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
+                    align-content: center;
         
-                    border: none;
-                    
                     *{
-                        @extend .mainFont;
-                        font-size: 1.25rem;
-        
-                        display: flex;
+                        color: black;
+
+                        height: auto;
                         width: auto;
-                        margin: 0 1.5rem 0 1.5rem;
-                    }
-        
-                    
-                    h3 {
                         
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
                     }
-                 
+
+                    p {
+                        @extend .mainFont;
+                        font-size: 1rem;
+                    }
                 }
+                li:hover{
+                    i {
+                        transform: scale(1.25);
+                        transform: translate(-.125, -.125);
+                    }
+                }
+
             }
         }
-
-        width: 100%;
     }
+
     #mapNavListWrap {
         display: block;
 
         flex: 1;
         overflow: auto;
+        margin-top: 1rem;
         #mapNavList {
             @extend .default;
+
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+            
             height: auto;
-            
-            flex-direction: column;
-            overflow: auto;
-            
             max-height: 100%;
             overflow-y: auto;
                          
             div {
-                display: block;
-                text-align: center;
-
-                background-color: black;
-                border-top: solid .25rem $primPink;
-
                 cursor: pointer;
+                
+                box-sizing: border-box;
+                padding: .25rem;
+                width: 50%;
+                
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-content: center;
 
+                img {
+                    max-width: 80%;
+                    max-height: 5.5rem;
+
+                    margin: auto;
+                    transform: scale(.85);
+                    
+                    transform: translate(.5525, .5525);
+                }
                 h2 {
-                    width: auto;
-                    display: inline-block;
-                    margin: 0 auto 0 auto;
+                    // max-width: 90%;
 
+                    text-align: center;            
+                    font-size: 1rem;
+        
+                    margin: 0 auto 0 auto;
                     padding: .5rem .65rem .65rem .35rem;
 
-                    border-radius: 2.5rem;
-                    background-color: black;
-                    color: white;
-
-
+                    color: black;
                 }
+            }
 
-                
+            div:hover {
+                img {
+                    transform: scale(1);
+                    
+                    transform: translate(0, 0);
+                }
             }
         }
     }
