Didn't mean to dev on master/styles

--- a/src/scss/common/utility.scss
+++ b/src/scss/common/utility.scss
@@ -5,13 +5,9 @@
 .hidden { display: none !important; }
 
 .default {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    padding-block-start: 0;
-    padding-block-end: 0;
-    padding-inline-start: 0;
-    padding-inline-end: 0;
+    padding: 0;
     margin: 0;
+    padding-inline-start: 0 !important;
     list-style: none;
 }
 
@@ -34,12 +30,15 @@
 
 
 button {
+
+    // display: flex;
+    // justify-content: 
     border-radius: 2rem;
-    padding: .5rem .4rem .5rem 1rem;
+    padding: .5rem .75rem;// .5rem 1rem;
     
     @extend .mainCapsFont;
-    font-size: 1.25rem;
-    font-weight: 600;
+    font-size: 1.15rem;
+    font-weight: 525;
     
     text-transform: uppercase;
     text-align: center;
