Should be done through PYP nav

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,8 +5,6 @@
 @import "./pickYourPassion.scss";
 @import "./mapNav.scss";
 
-//utility
-
 .parentWidth {
     width: 80%;
     margin: auto;
@@ -62,8 +60,6 @@
     }
 }
 
-//Page Setup
-
 body {
     @extend .default;
 
@@ -86,6 +82,7 @@ body {
         background-size: cover;
     }
 }
+// End page setup
 
 main {
     height: 80vh;
@@ -117,221 +114,7 @@ main {
     }
 }
 
-#learnMoreButton {
-    box-sizing: border-box;
-    width: 100%;
-    height: 10vh;
-
-    margin: 0 auto 0 auto;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-
-    div {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        height: auto;
-        margin: auto auto .75rem auto;
-
-        i {
-            text-align: center;
-            margin: auto .5rem auto .5rem;
-            color: $primPink;
-            font-size: 2rem;
-        }
-        
-        h2 {
-            @extend .mainCapsFont;
-            @extend .default;
-            margin: auto 0 auto 0;
-    
-            font-size: 1.65rem;
-            text-align: center;
-            width: 15rem;
-            color: #1e1e1e;
-        }
-    }
-}
-
-//Styles for opened Pick Your Passion Portal
-
-.clicked {
-    #headerImageWrap {
-        height: 27.5vh !important;
-        justify-content: center;
-    }
-
-    aside {
-        height: 7.5vh !important;
-    
-        p { margin: auto; }
-    }
-    nav {
-        @extend .default;
-        display: block;
-        overflow-x: hidden;
-
-        box-sizing: border-box;
-        height: 55vh;
-        max-height: 55vh;
-
-        margin-top: 0 !important;
-        padding: 0 !important;
-        
-        div {
-            height: auto;
-    
-            h1 {
-                @extend .default;
-                color: #1E1E1E !important;
-                
-                padding-top: .5rem !important;
-                padding-bottom: 1.5rem !important; 
-        
-                border: none !important;
-                border-color: black;    
-            }
-        }
-    
-    
-        ul {
-            @extend .default;
-            list-style: none;
-            
-            display: flex !important;        
-            flex-direction: row;
-
-            justify-content: center;
-            flex-wrap: wrap;
-
-            height: auto;
-            width: 100%;
-            
-            padding: 2rem 0 2rem 0;
-            border-top: .15rem solid $primPink;
-            border-bottom: .15rem solid $primPink;
-
-            max-height: 60%;
-            
-    
-            li {
-                @extend .mainButton;
-                
-                
-                box-sizing: border-box;
-                width: 20%;
-                min-height: 6rem;
-
-                padding: .15rem;
-                margin: .35rem;
-
-                border: .15rem solid $primPink;
-                visibility: visible !important;
-                
-                a {
-                    @extend .articleFontStyles;
-                    border: none !important;
-    
-                    font-size: 1.15rem !important;
-                    text-decoration: none;
-                    color: #1E1E1E;
-                }
-            }
-        }
-    }
-} 
-
-#directedContent {
-    height: 50vh;
-    padding: 0;
-    // box-sizing: border-box;
-
-    article {
-        @extend .default;
-        display: flex;
-        flex-wrap: wrap;
-        
-        width: 100%;
-        height: 100%;
-
-        padding: none;
-        margin: auto;
-
-    
-        div {
-            @extend .default;
-            margin: auto;
-            
-
-            height: 100%;
-            width: 39%;
-        }
-    
-        #adImgWrap {
-            @extend .default;
-            margin-left: 10%;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            img {
-                height: 100%;
-                max-width: 100%;
-
-                margin: auto;
-            }
-        }
-    
-        #adTextWrap {
-            padding: none;
-            margin-right: 10%;
-            h3 {
-                margin: .75rem 0 .75rem 0;
-                @extend .default;
-                @extend .mainCapsFont;
-
-                font-size: 1rem;
-                font-weight: 400;
-                text-align: left;
-                text-transform: uppercase;
-            }
-    
-            h2 {
-                @extend .default;
-                @extend .mainCapsFont;
-
-                font-size: 2rem;
-                line-height: 1.75rem;
-                font-weight: 800;
-            }
-    
-            p {
-                @extend .mainFont;
-                font-weight: 400;
-                font-size: 1rem;
-                margin: 1.5rem 0 1.5rem 0;
-            }
-        }
-    }
-}
-
-#directedContent:hover {
-    box-shadow: inset 0 0 .75rem rgba($color: #1E1E1E, $alpha: 0.25);
-    
-    cursor: pointer;
-
-    #adImgWrap  img {
-            height: 110%;
-            max-width: none;//100%;
-    }
-
-    article { background-color: rgba($color: $primPink, $alpha: 0.1);}
-}
-
-#readMoreAd { width: 11rem; }
+// New page section
 
 #directorsWrap {
     @extend .default;
@@ -384,6 +167,77 @@ main {
 
     article { display: none; }
 }
+
+// New page section
+
+#directedContent {
+    @extend .default;
+    #bgWrap {
+        width: 100%;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    article {
+        @extend .default;
+        max-width: 1280px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-content: center;
+
+        img { height: 40vh; }
+    
+        #adTextWrap {
+            @extend .default;
+            @extend .mainFont;
+            flex: .6;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            padding: 3.75vh 0;
+
+            h5, h2, p {
+                @extend .default;
+                text-transform: uppercase;
+            }
+
+            h5 {
+                font-weight: 650;
+            }
+    
+            h2 {
+                font-size: 2rem;
+                font-weight: 700;
+            }
+    
+            p {
+                font-weight: 400;
+                text-transform: none;
+            }
+
+            button {
+                margin: 0 auto;
+
+                i {
+                    margin-left: .5rem;
+                }
+            }
+        }
+    }
+
+    &:hover { 
+        #bgWrap { background-color: rgba($color: $primPink, $alpha: 0.1); }
+        background-color: white;
+    }
+}
+
+// New page section
 
 #contactUsWrap {
     width: 100%;
