--- a/src/scss/common/utility.scss
+++ b/src/scss/common/utility.scss
@@ -17,7 +17,7 @@
     // essential for branding/visual consistency of sub-foreground content
     z-index: -2!important;
     background-color: white;
-    box-shadow: inset 0 0 .75rem rgba($color: $primPink, $alpha: 0.25) !important;
+    box-shadow: inset 0 0 .75rem rgba($color: #1E1E1E, $alpha: 0.25) !important;
     
     
 
@@ -37,6 +37,7 @@ button {
     padding: .5rem .75rem;// .5rem 1rem;
     
     @extend .mainCapsFont;
+    @extend .default;
     font-size: 1.15rem;
     font-weight: 525;
     
