--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -78,8 +78,9 @@ body {
 
         background-image:url('../assets/bg.png');
         
-        background-position: center center;
+        background-repeat: no-repeat;
         background-size: cover;
+        background-position: top right;
     }
 }
 // End page setup
@@ -130,7 +131,7 @@ main {
 
     #directors {
         @extend .default;
-        max-width: 1280px;
+        max-width: 1150px;
 
         display: flex;
         justify-content: space-around;
@@ -182,7 +183,7 @@ main {
 
     article {
         @extend .default;
-        max-width: 1280px;
+        max-width: 1150px;
 
         display: flex;
         flex-direction: row;
@@ -244,7 +245,7 @@ main {
     background-color: white;
 
     div {
-        max-width: 1280px;
+        max-width: 1150px;
         margin: auto;
         
         display: flex;
