--- a/src/scss/pickYourPassion.scss
+++ b/src/scss/pickYourPassion.scss
@@ -14,20 +14,42 @@ body { @extend .default; }
 #pickYouPassionWrap {
     background-color: white;
 
-    #pickYourPassionNav {
-        box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
 
+    
+
+    #pickYourPassionNav {
+        max-width: 1150px;
+        box-sizing: border-box;
         width: 100%;
+        
+        padding: 0 0 2rem 0;
         margin: auto;
-        padding: 0 10% 5rem 10%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        
+        aside {
+            @extend .mainCapsFont;
+            width: 100%;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-size: 2rem; 
+            margin: auto;
+            padding: 1.5rem 0;
+
+            text-align: center;
+    
+        }
 
         div {
-            margin: 5% 2.5% 0 2.5%;
+            box-sizing: border-box;
             width: 20%;
-            height: 11.5rem;
+            
+            margin: 2.5% 2.5%;
     
             display: flex;
             flex-direction: column;
@@ -42,35 +64,24 @@ body { @extend .default; }
             }
     
             img {
-
-                // height: 7rem;
                 max-width: 100%;
                 width: auto;
                 height: auto;
                 max-height: 7rem;
             }
             
-            
             button {
                 font-size: 1rem; 
                 text-transform: none;
                 min-height: 3.5rem;
-                
+                margin: 1.5rem 0 0 0;
             }
         }
         
         div:hover {
             button {
-                background-color: $primPink;
-                color: #1E1E1E;
-            }
-
-            margin: 5% .5% 0 .5%;
-            width: 24%;
-            height: 12rem;
-            img {
-                max-width: 125%;
-                max-height: 8rem;
+                background-color: #dfc4ce;
+                color: #161212;
             }
         }
     
@@ -100,7 +111,7 @@ body { @extend .default; }
 
     .border {
         width: 100%;
-        height: 3.5% !important;
+        height: 1.5% !important;
         background-color: white;
         z-index: 1001;
 
@@ -111,7 +122,7 @@ body { @extend .default; }
     #topPassionBorder { top: 0; left: 0;}
     
     #bottomPassionBorder { 
-        top: 96.5%; 
+        top: 98.5%; 
         left: 0;
         position: relative; 
 
@@ -134,6 +145,9 @@ body { @extend .default; }
             p {
                 margin: 0;
                 padding: 0;
+
+                font-size: .75rem;
+                font-weight: 200;
                 
                 a {
                     margin-left: .25rem;
