--- a/src/scss/common/utility.scss
+++ b/src/scss/common/utility.scss
@@ -49,8 +49,13 @@ button {
     display: flex;
     flex-direction: row;
     justify-content: center; 
+
+    border: none !important;
+
     
     
+    background-color: #1E1E1E !important;
+    transition: all .5s!important;
 
     h1 {
         @extend .mainCapsFont;
@@ -59,14 +64,23 @@ button {
         padding: 0;
         font-size: 1.25rem;
         font-weight: 600;
-        
+
         text-transform: uppercase;
         text-align: center;
 
-        max-width: 90%;
+        transition: all .5s!important;
+        color: white !important;
+
+        
     }
 
-    i{ visibility: hidden; width: 0; } 
+    color: white !important;
+
+    i {
+        width: 0; 
+        visibility: hidden; 
+        color: #1E1E1E!important;
+    } 
 }
 
 button:hover {
@@ -75,6 +89,9 @@ button:hover {
         width: auto;
         margin-left: auto;
     }
+    h1 { color: #1E1E1E!important;}
+    color: #1E1E1E!important;
+        background-color: #dfc4ce!important;
 }
 
 // .arrowButton  {
