--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "common/colors.scss";
 @import "common/utility.scss";
 @import "common/fonts.scss";
+@import "common/form.scss";
 @import "common/header.scss";
 @import "./pickYourPassion.scss";
 @import "./mapNav.scss";
@@ -225,9 +226,7 @@ main {
             button {
                 margin: 0 auto;
 
-                i {
-                    margin-left: .5rem;
-                }
+                i { margin-left: .5rem; }
             }
         }
     }
@@ -242,65 +241,39 @@ main {
 
 #contactUsWrap {
     width: 100%;
+    padding: 1rem;
+    
     background-color: white;
+    box-sizing: border-box;
 
     div {
-        max-width: 1150px;
+        width: 100%;
         margin: auto;
+        max-width: 1150px;
         
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         justify-content: center;
         
-        div { @extend .default; }
+        div { 
+            @extend .default; 
+            width: 50%;
+        }
 
         #socialMediaLinkWrap {
-            width: 50%;
+            display: none;
         }
     
         #contactUsFormWrap {
-            width: 50%;
+            #contactTitle {
+                width: 100%;
+                margin: 0 0 1rem 0;
 
-            form {
-                @extend .default;
-
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: space-between;
-    
-                input {
-                    @extend .default;
-                    
-                    width: 45%;
-                    padding: .5rem;
-                    border-radius: .25rem;
-                    outline: none;
-                    border: solid #1E1E1E .1rem;
-                    background: none;
-                    color: black;
-                }
-    
-                textarea {
-                    width: 100%;
-                    resize: none;
-                    margin-top: 1rem;
-                    height: 8.5rem;
-                    @extend .default;
-                    padding: .5rem;
-                    border-radius: .25rem;
-                    outline: none;
-                    border: solid #1E1E1E .1rem;
-                    background: none;
-                    color: black;
-                }
-
-                label { display: none; }
-                
-                input:focus, textarea:focus 
-                    { border-color: $primPink; }
-            
-            
+                @extend .mainCapsFont;
+                text-transform: uppercase;
+                font-size: 1.5rem;
+                text-align: center;
             }
         }
     }
