--- a/src/scss/pickYourPassion.scss
+++ b/src/scss/pickYourPassion.scss
@@ -57,6 +57,7 @@ body { @extend .default; }
             text-decoration: none;
             cursor: pointer;
 
+            
             :hover {
                 button {
                     background-color: $primPink;
@@ -75,6 +76,8 @@ body { @extend .default; }
                 text-transform: none;
                 min-height: 3.5rem;
                 margin: 1.5rem 0 0 0;
+
+                transition: all .5s;
             }
         }
         
