Buttons with icons now actually fixed

--- a/src/scss/common/colors.scss
+++ b/src/scss/common/colors.scss
@@ -1,9 +1,8 @@
 //colors
+$offBlack: #161212;
 
+$offPink: #dfc4ce;
 $primPink: #fe6673;
-
-$bgPink: #dfc4ce;
 
 $offWhite: #efefef;
 $offWhiteBackground: rgba(239, 239, 239, .85);
-//rgba(239, 239, 239, )
