--- a/src/scss/common/form.scss
+++ b/src/scss/common/form.scss
@@ -10,12 +10,12 @@ form {
         @extend .mainFont;
         font-size: 1rem;
         outline: none;
-        border: solid #1E1E1E .1rem;
+        border: solid $offBlack .1rem;
         background: none;
         border-radius: .65rem;
         padding: .25rem .5rem;
         margin: .5rem 0;
-        color: black;
+        color: $offBlack;
     }
     input {
         box-sizing: border-box;
@@ -36,25 +36,13 @@ form {
 
     button {
         @extend .mainCapsFont;
-        margin: 0;
+        margin: 0 0 0 auto;
         padding: .75rem;
         height: auto;
 
-        // font-weight: 200;
+    
         h1 {
             font-weight: 200;
         }
-        // border: none;
-        // color: white;
-        // background-color: #1E1E1E;
-
-
-        // transition: all .5s;
     }
-
-    // button:hover {
-    //     background-color: #dfc4ce;
-    //     color: #1E1E1E;
-
-    // }
 }
