--- a/src/scss/common/utility.scss
+++ b/src/scss/common/utility.scss
@@ -11,98 +11,93 @@
     list-style: none;
 }
 
-// .lowerContent intended for placement on secondary wrapper div
 .lowerContent {
     @extend .default;
-    // essential for branding/visual consistency of sub-foreground content
-    z-index: -2!important;
+    z-index: -2 !important;
     background-color: white;
-    box-shadow: inset 0 0 .75rem rgba($color: #1E1E1E, $alpha: 0.25) !important;
-    
-    
+    box-shadow: inset 0 0 .75rem rgba($color: $offBlack, $alpha: 0.25) !important;
 
-    // convenience/preference
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
 button {
-    border-radius: 2rem;
-    padding: .5rem .75rem;// .5rem 1rem;
-    
     @extend .mainCapsFont;
-    @extend .default;
     font-size: 1.15rem;
     font-weight: 525;
-    
+
     text-transform: uppercase;
     text-align: center;
 
-    background-color: #1E1E1E;
-    color: $offWhite;
+    @extend .default;
+    margin: 0 auto;
+    padding: .5rem .75rem;
+    border-radius: 2rem;
     
-    border: none;
-    outline: none;
-    cursor: pointer;
+    background-color: $offBlack !important;
+    color: $offWhite !important;
     
     display: flex;
     flex-direction: row;
     justify-content: center; 
-
+    
+    outline: none;
     border: none !important;
 
+    display: flex;
+    flex-direction: row;
     
+    width: auto !important;
     
-    background-color: #1E1E1E !important;
     transition: all .5s!important;
+    cursor: pointer;
 
     h1 {
         @extend .mainCapsFont;
-        @extend .default;
-        margin-left: 0 !important;
-        padding: 0;
         font-size: 1.25rem;
         font-weight: 600;
-
+    
         text-transform: uppercase;
         text-align: center;
 
-        transition: all .5s!important;
-        color: white !important;
-
+        @extend .default;
+        margin-left: 0 !important;
+        padding: 0;
         
+        
+        color: $offWhite !important;
+        transition: all .5s!important;
     }
 
-    color: white !important;
-
     i {
+        visibility: hidden;
+        opacity: 0;
+        
         width: 0; 
-        visibility: hidden; 
-        color: #1E1E1E!important;
+        padding: 0;
+        box-sizing: border-box;
+
+        color: $offBlack!important;
     } 
 }
 
 button:hover {
+    background-color: #dfc4ce!important;
+    color: $offBlack!important;
+
     i {
+        opacity: 1;
         visibility: visible;
-        width: auto;
-        margin-left: auto;
+        padding: 0 1rem 0 .5rem!important;
     }
-    h1 { color: #1E1E1E!important;}
-    color: #1E1E1E!important;
-        background-color: #dfc4ce!important;
+    h1 { color: $offBlack!important;}
 }
-
-// .arrowButton  {
-//     width: 15vw !important;
-// }
-
 
 .slogan{ 
     width: 100%;
     text-align: center;
-    color: black;   
+    color: $offBlack;   
     display: flex;
     flex-direction: column;
     justify-content: center;
